# Munshi

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
munshi/: __init__.py  config.py  main.py
munshi/ai/: claude_client.py  offline_nlp.py  prompt_templates.py  tool_definitions.py
munshi/api/: server.py
munshi/api/routes/: inventory.py  ledger.py  status.py  udhar.py
munshi/audio/: audio_manager.py  stt.py  tts.py  vad.py  wake_word.py
munshi/core/: orchestrator.py  response_builder.py  session.py
munshi/db/: database.py  models.py
munshi/db/repositories/: inventory_repo.py  ledger_repo.py  udhar_repo.py
munshi/hardware/: led_controller.py  platform_detect.py
munshi/modules/inventory/: schemas.py  service.py
munshi/modules/ledger/: schemas.py  service.py
munshi/modules/reports/: service.py
munshi/modules/udhar/: schemas.py  service.py
scripts/: download_models.py  seed_inventory.py  setup_device.sh
tests/: conftest.py  test_inventory.py  test_ledger.py  test_offline_nlp.py  test_response_builder.py  test_udhar.py
